Adapting log4j.properties changes from previously merged pull requests #2 #3

--- a/modules/distribution/conf/log4j.properties
+++ b/modules/distribution/conf/log4j.properties
@@ -85,7 +85,7 @@ log4j.additivity.com.atomikos=false
 log4j.additivity.org.apache=false
 
 # CARBON_CONSOLE is set to be a ConsoleAppender using a PatternLayout.
-#log4j.appender.CARBON_CONSOLE=org.wso2.carbon.utils.logging.appenders.CarbonConsoleAppender
+log4j.appender.CARBON_CONSOLE=org.wso2.carbon.utils.logging.appenders.CarbonConsoleAppender
 log4j.appender.CARBON_CONSOLE=org.apache.log4j.ConsoleAppender
 log4j.appender.CARBON_CONSOLE.layout=org.wso2.carbon.utils.logging.TenantAwarePatternLayout
 # ConversionPattern will be overridden by the configuration setting in the DB
