Added more changes from previous commits

--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
 		<module>modules/styles</module>
 		<module>modules/dashboard</module>
         <!--todo: disabling integration until the migration to the new framework-->
-		<!--module>modules/integration</module-->
+		<module>modules/integration</module>
 <!--		<module>modules/samples</module> -->
 	</modules>
 
@@ -627,7 +627,7 @@
         <gadget.module.version>1.0.0</gadget.module.version>
         <i18n.module.version>1.0.0</i18n.module.version>
         <wso2.store.version>1.2.0-SNAPSHOT</wso2.store.version>
-        <test.framework.version>4.3.1-SNAPSHOT</test.framework.version>
+        <test.framework.version>4.3.1</test.framework.version>
         <test.framework.util.version>4.3.0-SNAPSHOT</test.framework.util.version>
         <operadriver.version>0.8.1</operadriver.version>
         <selenium.version>2.40.0</selenium.version>
