--- a/modules/distribution/pom.xml
+++ b/modules/distribution/pom.xml
@@ -61,6 +61,7 @@
         <dependency>
             <groupId>org.apache.shindig</groupId>
             <artifactId>shindig-server</artifactId>
+	        <version>${shindig.version}</version>
             <type>war</type>
         </dependency>
         <!--
