--- a/modules/samples/user-mgt/remote-user-mgt/pom.xml
+++ b/modules/samples/user-mgt/remote-user-mgt/pom.xml
@@ -37,6 +37,16 @@
             <artifactId>org.wso2.carbon.authenticator.stub</artifactId>
             <version>${carbon.kernel.version}</version>
         </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.authenticator.stub</artifactId>
+            <version>4.3.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>org.wso2.carbon.authenticator.stub</artifactId>
+            <version>4.3.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 
     <build>
