--- a/pom.xml
+++ b/pom.xml
@@ -560,7 +560,7 @@
 		<operadriver.version>0.8.1</operadriver.version>
 		<selenium.version>2.40.0</selenium.version>
 		<testng.version>6.1.1</testng.version>
-		<test.framework.version>4.3.1</test.framework.version>
+		<!--<test.framework.version>4.3.1</test.framework.version>-->
 		<platform.integration.utils.version>4.3.0-SNAPSHOT</platform.integration.utils.version>
 		<stub.version>4.3.0-SNAPSHOT</stub.version>
 		<identity.integration.ui.pages.version>5.1.0-SNAPSHOT</identity.integration.ui.pages.version>
