--- a/modules/integration/pom.xml
+++ b/modules/integration/pom.xml
@@ -168,7 +168,7 @@
         <dependency>
             <groupId>org.wso2.carbon.automation</groupId>
             <artifactId>org.wso2.carbon.automation.engine</artifactId>
-            <version>4.3.1</version>
+            <version>${test.framework.version}</version>
         </dependency>
     </dependencies>
     <properties>
