--- a/modules/integration/tests-integration/tests-backend/pom.xml
+++ b/modules/integration/tests-integration/tests-backend/pom.xml
@@ -253,7 +253,7 @@
         <dependency>
             <groupId>org.wso2.carbon.automation</groupId>
             <artifactId>org.wso2.carbon.automation.test.utils</artifactId>
-            <version>${test.framwork.version}</version>
+            <version>4.3.2-SNAPSHOT</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
