--- a/pom.xml
+++ b/pom.xml
@@ -555,7 +555,7 @@
 		<gadget.module.version>1.0.0</gadget.module.version>
 		<i18n.module.version>1.0.0</i18n.module.version>
 		<wso2.store.version>1.2.0-SNAPSHOT</wso2.store.version>
-		<test.framework.version>4.3.1</test.framework.version>
+		<test.framework.version>4.3.2-SNAPSHOT</test.framework.version>
 		<test.framework.util.version>4.3.0-SNAPSHOT</test.framework.util.version>
 		<operadriver.version>0.8.1</operadriver.version>
 		<selenium.version>2.40.0</selenium.version>
