# Please enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit. # On branch master # Your branch is up-to-date with 'origin/master'. # # Changes not staged for commit: #	modified:   modules/distribution/pom.xml #	modified:   modules/distribution/src/assembly/bin.xml #	modified:   modules/distribution/src/assembly/dist.xml #	modified:   modules/features/org.wso2.identity.styles.feature/pom.xml #	modified:   modules/features/org.wso2.identity.ui.feature/pom.xml #	modified:   modules/features/org.wso2.identity.utils.feature/pom.xml #	modified:   modules/integration/pom.xml #	deleted:    modules/integration/tests-ui-integration/src/test/resources/client/modules/addressing-1.6.1-wso2v11-20140915.221414-612.mar #	deleted:    modules/integration/tests-ui-integration/src/test/resources/client/modules/rampart-1.6.1-wso2v12.mar #	modified:   modules/p2-profile-gen/pom.xml #	modified:   modules/samples/user-mgt/remote-user-mgt/pom.xml #	modified:   pom.xml #

--- a/modules/features/org.wso2.identity.styles.feature/pom.xml
+++ b/modules/features/org.wso2.identity.styles.feature/pom.xml
@@ -40,7 +40,7 @@
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.core.ui.feature</artifactId>
-            <version>${carbon.platform.version}</version>
+            <version>${carbon.kernel.version}</version>
             <type>zip</type>
         </dependency>
 	</dependencies>
@@ -70,7 +70,7 @@
 								<bundleDef>org.wso2.identity:org.wso2.identity.styles</bundleDef>
 							</bundles>
 							<importFeatures>
-								<importFeatureDef>org.wso2.carbon.core.ui:${carbon.platform.version}</importFeatureDef>
+								<importFeatureDef>org.wso2.carbon.core.ui:${carbon.kernel.version}</importFeatureDef>
 							</importFeatures>
 						</configuration>
 					</execution>
