--- a/modules/integration/tests-ui-integration/tests-ui/pom.xml
+++ b/modules/integration/tests-ui-integration/tests-ui/pom.xml
@@ -240,7 +240,7 @@
         <dependency>
             <groupId>org.wso2.identity</groupId>
             <artifactId>org.wso2.identity.integration.common.clients</artifactId>
-            <version>${project.version}</version>
+            <!--<version>${project.version}</version>-->
             <exclusions>
                 <exclusion>
                     <groupId>org.wso2.carbon</groupId>
@@ -249,17 +249,17 @@
             </exclusions>
         </dependency>
 
-        <dependency>
-            <groupId>org.wso2.identity</groupId>
-            <artifactId>org.wso2.identity.integration.common.utils</artifactId>
-            <version>${project.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>org.wso2.carbon</groupId>
-                    <artifactId>org.wso2.carbon.rest.api</artifactId>
-                </exclusion>
-            </exclusions>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.wso2.identity</groupId>-->
+            <!--<artifactId>org.wso2.identity.integration.common.utils</artifactId>-->
+            <!--<version>${project.version}</version>-->
+            <!--<exclusions>-->
+                <!--<exclusion>-->
+                    <!--<groupId>org.wso2.carbon</groupId>-->
+                    <!--<artifactId>org.wso2.carbon.rest.api</artifactId>-->
+                <!--</exclusion>-->
+            <!--</exclusions>-->
+        <!--</dependency>-->
         <dependency>
             <groupId>org.wso2.identity</groupId>
             <artifactId>ui-pages</artifactId>
