--- a/modules/integration/pom.xml
+++ b/modules/integration/pom.xml
@@ -36,8 +36,8 @@
         <module>tests-common/admin-clients</module>
         <module>tests-common/integration-test-utils</module>
         <module>tests-common/ui-pages</module>
-        <module>tests-integration</module>
-        <module>tests-ui-integration</module>
+        <!--module>tests-integration</module-->
+        <!--module>tests-ui-integration</module-->
         <!--<module>tests</module>-->
 =======
         <module>tests-common</module>
