--- a/modules/integration/pom.xml
+++ b/modules/integration/pom.xml
@@ -35,8 +35,8 @@
         <module>tests-common/admin-clients</module>
         <module>tests-common/integration-test-utils</module>
         <module>tests-common/ui-pages</module>
-        <module>tests-integration</module>
-        <module>tests-ui-integration</module>
+        <!--module>tests-integration</module-->
+        <!--module>tests-ui-integration</module-->
         <!--<module>tests</module>-->
     </modules>
     <build>
