--- a/pom.xml
+++ b/pom.xml
@@ -397,12 +397,12 @@
 			</dependency>
 
             <!-- Dependencies for Automation Test Framework-->
-            <!--<dependency>-->
-                <!--<groupId>org.wso2.carbon</groupId>-->
-                <!--<artifactId>org.wso2.carbon.integration.common.admin.client</artifactId>-->
-                <!--<version>${test.framework.util.version}</version>-->
-                <!--<scope>test</scope>-->
-            <!--</dependency>-->
+            <dependency>
+                <groupId>org.wso2.carbon</groupId>
+                <artifactId>org.wso2.carbon.integration.common.admin.client</artifactId>
+                <version>${test.framework.util.version}</version>
+                <scope>test</scope>
+            </dependency>
             <dependency>
                 <groupId>org.wso2.carbon.automation</groupId>
                 <artifactId>org.wso2.carbon.automation.engine</artifactId>
@@ -555,7 +555,7 @@
 	<properties>
 		<carbon.platform.version>4.3.0-SNAPSHOT</carbon.platform.version>
 		<stratos.identity.version>${stratos.version}</stratos.identity.version>
-		<identity.version>5.1.0-SNAPSHOT</identity.version>
+		<product.identity.version>5.1.0-SNAPSHOT</product.identity.version>
 		<bcprov.jdk13.version>140</bcprov.jdk13.version>
 		<bcprov.jdk15.version>132</bcprov.jdk15.version>
 		<axis2.wso2.version>${orbit.version.axis2}</axis2.wso2.version>
