--- a/modules/integration/tests-ui-integration/pom.xml
+++ b/modules/integration/tests-ui-integration/pom.xml
@@ -272,7 +272,7 @@
         <dependency>
             <groupId>org.wso2.identity</groupId>
             <artifactId>org.wso2.identity.integration.ui.pages</artifactId>
-            <version>${identity.version}</version>
+            <version>${product.identity.version}</version>
             <scope>test</scope>
         </dependency>
         <dependency>
