--- a/modules/integration/pom.xml
+++ b/modules/integration/pom.xml
@@ -37,7 +37,7 @@
         <module>tests-common/ui-pages</module>
         <module>tests-integration</module>
         <module>tests-ui-integration</module>
-        <module>tests</module>
+        <!--<module>tests</module>-->
     </modules>
     <build>
         <plugins>
