Fixing product-is POMs to pick dependency versions from root POM
Conflicts:
	modules/distribution/pom.xml
	modules/integration/pom.xml
	modules/integration/tests-common/admin-clients/pom.xml
	modules/integration/tests-integration/pom.xml
	modules/integration/tests-ui/pom.xml
	pom.xml

--- a/modules/dashboard/pom.xml
+++ b/modules/dashboard/pom.xml
@@ -54,8 +54,8 @@
                         </Private-Package>
                         <Import-Package>
                             com.wso2.carbon.governance.tenant.ui.servlets.*,
-                            javax.servlet; version=2.4.0,
-                            javax.servlet.http; version=2.4.0,
+                            javax.servlet; version="${sevlet.api.version}",
+                            javax.servlet.http; version="${sevlet.api.version}",
                             org.apache.lucene.*,
                             *;resolution:=optional
                         </Import-Package>
