--- a/modules/integration/tests-ui/pom.xml
+++ b/modules/integration/tests-ui/pom.xml
@@ -1,27 +1,7 @@
-<<<<<<< HEAD
-=======
-<!--
- ~ Copyright (c) 2005-2010, WSO2 Inc. (http://www.wso2.org) All Rights Reserved.
- ~
- ~ WSO2 Inc. licenses this file to you under the Apache License,
- ~ Version 2.0 (the "License"); you may not use this file except
- ~ in compliance with the License.
- ~ You may obtain a copy of the License at
- ~
- ~    http://www.apache.org/licenses/LICENSE-2.0
- ~
- ~ Unless required by applicable law or agreed to in writing,
- ~ software distributed under the License is distributed on an
- ~ "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
- ~ KIND, either express or implied.  See the License for the
- ~ specific language governing permissions and limitations
- ~ under the License.
- -->
->>>>>>> 15c18f2... adding Integration tests modules and migrated tests
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
         <groupId>org.wso2.identity</groupId>
         <artifactId>identity-integration-tests</artifactId>
@@ -30,46 +10,49 @@
     </parent>
 
     <modelVersion>4.0.0</modelVersion>
-<<<<<<< HEAD
-    <artifactId>org.wso2.identity.ui.integration.test</artifactId>
+    <name>WSO2 IS UI- Test Module</name>
+    <artifactId>identity-tests-ui</artifactId>
     <packaging>jar</packaging>
-    <name>org.wso2.identity.ui.integration.test</name>
 
     <build>
         <plugins>
             <plugin>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <inherited>false</inherited>
-                <version>2.12.3</version>
+                <version>2.12.4</version>
                 <configuration>
-                    <skipTests>${skipUiTests}</skipTests>
+                   <!-- <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m -Xdebug -Xnoagent -Djava.compiler=NONE -Xrunjdwp:transport=dt_socket,server=y,suspend=y,address=5006</argLine>-->
                     <argLine>-Xmx1024m -XX:PermSize=256m -XX:MaxPermSize=512m</argLine>
                     <suiteXmlFiles>
-                        <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+                       <!--<suiteXmlFile>src/org.wso2.carbon.identity.ui.test/resources/testng-server-mgt.xml</suiteXmlFile>-->
+                          <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
                     </suiteXmlFiles>
+
                     <systemProperties>
                         <property>
                             <name>maven.test.haltafterfailure</name>
                             <value>false</value>
                         </property>
                         <property>
-                            <name>java.io.tmpdir</name>
-                            <value>${basedir}/target/</value>
-                        </property>
-                        <property>
                             <name>carbon.zip</name>
                             <value>
-                                ${basedir}/../../distribution/target/wso2is-${product.identity.version}.zip
+                                ${basedir}/../../distribution/target/wso2is-${project.version}.zip
                             </value>
                         </property>
                         <property>
                             <name>samples.dir</name>
-                            <value>${basedir}/../../samples/product</value>
+                            <value>${basedir}/../../../samples/product</value>
                         </property>
                         <property>
                             <name>framework.resource.location</name>
                             <value>
                                 ${basedir}/src/test/resources/
+                            </value>
+                        </property>
+                        <property>
+                            <name>server.list</name>
+                            <value>
+                                IS
                             </value>
                         </property>
                         <property>
@@ -82,28 +65,9 @@
                         <filters.file>${basedir}/src/test/resources/filters.txt</filters.file>
                         <emma.output>${basedir}/target/emma</emma.output>
                     </systemProperties>
-
                     <workingDirectory>${basedir}/target</workingDirectory>
                 </configuration>
             </plugin>
-
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-clean-plugin</artifactId>
-                <version>2.5</version>
-                <configuration>
-                    <filesets>
-                        <fileset>
-                            <directory>${basedir}/src/test/resources/client/modules</directory>
-                            <includes>
-                                <include>**/*.mar</include>
-                            </includes>
-                            <followSymlinks>false</followSymlinks>
-                        </fileset>
-                    </filesets>
-                </configuration>
-            </plugin>
-
             <plugin>
                 <artifactId>maven-dependency-plugin</artifactId>
                 <executions>
@@ -121,21 +85,7 @@
                             </includeArtifactIds>
                         </configuration>
                     </execution>
-                    <execution>
-                        <id>copy-jar-dependencies</id>
-                        <phase>compile</phase>
-                        <goals>
-                            <goal>copy-dependencies</goal>
-                        </goals>
-                        <configuration>
-                            <outputDirectory>${basedir}/src/test/resources/artifacts/IS/jar
-                            </outputDirectory>
-                            <includeTypes>jar</includeTypes>
-                            <includeArtifactIds>mysql-connector-java
-                            </includeArtifactIds>
-                            <excludeTransitive>true</excludeTransitive>
-                        </configuration>
-                    </execution>
+
                     <execution>
                         <id>copy-secVerifier</id>
                         <phase>compile</phase>
@@ -165,7 +115,7 @@
                                     <type>zip</type>
                                     <overWrite>true</overWrite>
                                     <outputDirectory>${basedir}/target/tobeCopied/</outputDirectory>
-                                    <includes>**/*.jks,**/*.mar</includes>
+                                    <includes>**/*.jks,**/*.mar,**/axis2_client.xml</includes>
                                 </artifactItem>
                             </artifactItems>
                         </configuration>
@@ -180,6 +130,23 @@
                     <execution>
                         <goals>
                             <goal>test-jar</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-surefire-report-plugin</artifactId>
+                <version>2.7.1</version>
+                <configuration>
+                    <outputDirectory>${basedir}/target/report</outputDirectory>
+                    <outputName>registry-api-test</outputName>
+                </configuration>
+                <executions>
+                    <execution>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>report-only</goal>
                         </goals>
                     </execution>
                 </executions>
@@ -205,6 +172,27 @@
                                     </directory>
                                     <includes>
                                         <include>**/*.jks</include>
+                                    </includes>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>copy-axis2files</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${basedir}/src/test/resources/axis2config
+                            </outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>
+                                        ${basedir}/target/tobeCopied/wso2is-${product.identity.version}/repository/conf/axis2/
+                                    </directory>
+                                    <includes>
+                                        <include>**/*.xml</include>
                                     </includes>
                                 </resource>
                             </resources>
@@ -238,75 +226,37 @@
 
     <dependencies>
         <dependency>
+            <groupId>emma</groupId>
+            <artifactId>emma</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.wso2.carbon</groupId>
+            <artifactId>SecVerifier</artifactId>
+            <type>aar</type>
+        </dependency>
+        <dependency>
             <groupId>org.wso2.carbon.automation</groupId>
-            <artifactId>org.wso2.carbon.automation.engine</artifactId>
+            <artifactId>org.wso2.carbon.automation.api</artifactId>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.automation</groupId>
-            <artifactId>org.wso2.carbon.automation.extensions</artifactId>
+            <artifactId>org.wso2.carbon.automation.core</artifactId>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.automation</groupId>
-            <artifactId>org.wso2.carbon.automation.test.utils</artifactId>
+            <artifactId>org.wso2.carbon.automation.utils</artifactId>
         </dependency>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.integration.common.admin.client</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.integration.common.utils</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.integration.common.extensions</artifactId>
-            <version>${test.framework.util.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.carbon</groupId>
-            <artifactId>org.wso2.carbon.integration.common.tests</artifactId>
-            <version>${test.framework.util.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.wso2.identity</groupId>
-            <artifactId>org.wso2.identity.integration.ui.pages</artifactId>
-            <version>${product.identity.version}</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.apache.wink</groupId>
-            <artifactId>wink-client</artifactId>
-            <version>1.1.3-incubating</version>
+            <groupId>org.testng</groupId>
+            <artifactId>testng</artifactId>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.wso2.charon</groupId>
             <artifactId>org.wso2.charon.core</artifactId>
-            <version>2.0.0</version>
-            <scope>test</scope>
         </dependency>
-    </dependencies>
-
-    <properties>
-        <skipUiTests>true</skipUiTests>
-        <test.framework.util.version>4.3.0-SNAPSHOT</test.framework.util.version>
-    </properties>
+        <dependency>
+            <groupId>org.apache.wink</groupId>
+            <artifactId>wink-client</artifactId>
+        </dependency>
 </project>
-<<<<<<< HEAD
-=======
-    <groupId>org.wso2.identity</groupId>
-    <artifactId>identity-ui-integration-tests</artifactId>
-    <packaging>pom</packaging>
-    <version>5.1.0-SNAPSHOT</version>
-    <name>WSO2 Identity UI Intetration Test</name>
-
-    <modules>
-        <module>tests-ui</module>
-    </modules>
-
-</project>
->>>>>>> 15c18f2... adding Integration tests modules and migrated tests
-=======
->>>>>>> baa5a81... Fresh branch with new test migration, after carbon version migration
