--- a/modules/samples/oauth2/playground2/pom.xml
+++ b/modules/samples/oauth2/playground2/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.wso2.identity</groupId>
         <artifactId>wso2is-identity-samples-oauth2</artifactId>
-        <version>5.0.0</version>
+        <version>5.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -13,20 +13,16 @@
     <artifactId>playground2</artifactId>
     <packaging>war</packaging>
     <name>OAuth 2.0 Playground App with WSO2 Identity Server 5.0.0</name>
-    <version>5.0.0</version>
     <url>http://maven.apache.org</url>
 
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.1</version>
-            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
-            <version>2.5</version> 
         </dependency>
         <dependency>
             <groupId>org.apache.axis2.wso2</groupId>
@@ -36,51 +32,45 @@
             <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/axis2-1.6.0.wso2v2.jar</systemPath> 
         </dependency>
         <dependency>
-             <groupId>com.google.gdata.wso2</groupId>
-             <artifactId>gdata-core</artifactId>
-            <version>1.0.0.wso2v1</version>
-             <scope>system</scope>
-            <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/gdata-core-1.0.0.wso2v1.jar</systemPath> 
+            <groupId>com.google.gdata.wso2</groupId>
+            <artifactId>gdata-core</artifactId>
+            <scope>system</scope>
+            <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/gdata-core-1.0.0.wso2v1.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>com.google.common.wso2</groupId>
             <artifactId>google-collect</artifactId>
-            <version>1.0.0.wso2v2</version>
              <scope>system</scope>
             <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/google-collect-1.0.0.wso2v2.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.apache.ws.commons.axiom.wso2</groupId>
             <artifactId>axiom</artifactId>
-            <version>1.2.11.wso2v1</version>
+            <version>${axiom.wso2.version}</version>
              <scope>system</scope>
             <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/axiom-1.2.11.wso2v1.jar</systemPath> 
         </dependency>
         <dependency>
             <groupId>org.apache.amber</groupId>
             <artifactId>oauth2-client</artifactId>
-            <version>0.22.1358727-wso2v1</version>
             <scope>system</scope>
             <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/amber-0.22.1358727.wso2v1.jar</systemPath>
         </dependency>
 		<dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.identity.oauth.stub</artifactId>
-            <version>4.2.2</version>
             <scope>system</scope>               
             <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/org.wso2.carbon.identity.oauth.stub_4.2.2.jar</systemPath>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.utils</artifactId>
-            <version>4.0.0</version>
             <scope>system</scope>            
             <systemPath>${project.basedir}/src/main/webapp/WEB-INF/lib/org.wso2.carbon.utils-4.0.0.jar</systemPath>            
         </dependency>
         <dependency>
 	        <groupId>com.googlecode.json-simple</groupId>
 	        <artifactId>json-simple</artifactId>
-	        <version>1.1</version>
         </dependency>
     </dependencies>
 
