--- a/modules/samples/passive-sts/passive-sts-client/pom.xml
+++ b/modules/samples/passive-sts/passive-sts-client/pom.xml
@@ -4,6 +4,13 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
+    <parent>
+        <groupId>org.wso2.identity</groupId>
+        <artifactId>wso2identity-samples-passivests</artifactId>
+        <version>5.1.0-SNAPSHOT</version>
+        <relativePath>../pom.xml</relativePath>
+    </parent>
+
     <groupId>org.wso2.identity</groupId>
     <artifactId>PassiveSTSSample</artifactId>
     <packaging>pom</packaging>
