--- a/modules/samples/sso/SSOAgentSample/pom.xml
+++ b/modules/samples/sso/SSOAgentSample/pom.xml
@@ -17,9 +17,8 @@
     <name>Travelocity.COM ServiceProvider / RelyingParty Webapp</name>
     <dependencies>
         <dependency>
-            <groupId>org.wso2.carbon</groupId>
+            <groupId>org.wso2.carbon.identity</groupId>
             <artifactId>org.wso2.carbon.identity.sso.agent</artifactId>
-            <version>1.2.0</version>
         </dependency>
     </dependencies>
 
