--- a/modules/samples/user-mgt/remote-user-mgt/pom.xml
+++ b/modules/samples/user-mgt/remote-user-mgt/pom.xml
@@ -7,7 +7,7 @@
     <parent>
         <groupId>org.wso2.identity</groupId>
         <artifactId>wso2is-identity-samples-usermgt</artifactId>
-        <version>5.0.0</version>
+        <version>5.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -20,22 +20,18 @@
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.um.ws.api.stub</artifactId>
-            <version>${wso2carbon.version}</version>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.um.ws.api</artifactId>
-            <version>${wso2carbon.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.axis2.wso2</groupId>
             <artifactId>axis2</artifactId>
-            <version>${axis2.wso2.version}</version>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.authenticator.stub</artifactId>
-            <version>${carbon.kernel.version}</version>
         </dependency>
     </dependencies>
 
