--- a/modules/integration/tests-ui-integration/pom.xml
+++ b/modules/integration/tests-ui-integration/pom.xml
@@ -55,7 +55,7 @@
                         <property>
                             <name>carbon.zip</name>
                             <value>
-                                ${basedir}/../../distribution/target/wso2is-${project.version}.zip
+                                ${basedir}/../../distribution/target/wso2is-${product.identity.version}.zip
                             </value>
                         </property>
                         <property>
@@ -197,7 +197,7 @@
                             <resources>
                                 <resource>
                                     <directory>
-                                        ${basedir}/target/tobeCopied/wso2is-${project.version}/repository/resources/security/
+                                        ${basedir}/target/tobeCopied/wso2is-${product.identity.version}/repository/resources/security/
                                     </directory>
                                     <includes>
                                         <include>**/*.jks</include>
@@ -218,7 +218,7 @@
                             <resources>
                                 <resource>
                                     <directory>
-                                        ${basedir}/target/tobeCopied/wso2is-${project.version}/repository/deployment/client/modules
+                                        ${basedir}/target/tobeCopied/wso2is-${product.identity.version}/repository/deployment/client/modules
                                     </directory>
                                     <includes>
                                         <include>**/*.mar</include>
