--- a/modules/integration/tests-ui/pom.xml
+++ b/modules/integration/tests-ui/pom.xml
@@ -5,7 +5,7 @@
     <parent>
         <groupId>org.wso2.identity</groupId>
         <artifactId>identity-integration-tests</artifactId>
-        <version>5.0.0</version>
+        <version>5.1.0-SNAPSHOT</version>
         <relativePath>../pom.xml</relativePath>
     </parent>
 
@@ -168,7 +168,7 @@
                             <resources>
                                 <resource>
                                     <directory>
-                                        ${basedir}/target/tobeCopied/wso2is-${project.version}/repository/resources/security/
+                                        ${basedir}/target/tobeCopied/wso2is-${product.identity.version}/repository/resources/security/
                                     </directory>
                                     <includes>
                                         <include>**/*.jks</include>
@@ -189,7 +189,7 @@
                             <resources>
                                 <resource>
                                     <directory>
-                                        ${basedir}/target/tobeCopied/wso2is-${project.version}/repository/conf/axis2/
+                                        ${basedir}/target/tobeCopied/wso2is-${product.identity.version}/repository/conf/axis2/
                                     </directory>
                                     <includes>
                                         <include>**/*.xml</include>
@@ -210,7 +210,7 @@
                             <resources>
                                 <resource>
                                     <directory>
-                                        ${basedir}/target/tobeCopied/wso2is-${project.version}/repository/deployment/client/modules
+                                        ${basedir}/target/tobeCopied/wso2is-${product.identity.version}/repository/deployment/client/modules
                                     </directory>
                                     <includes>
                                         <include>**/*.mar</include>
@@ -228,48 +228,35 @@
         <dependency>
             <groupId>emma</groupId>
             <artifactId>emma</artifactId>
-            <version>${emma.version}</version>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>SecVerifier</artifactId>
-            <version>${carbon.version}</version>
             <type>aar</type>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.automation</groupId>
             <artifactId>org.wso2.carbon.automation.api</artifactId>
-            <version>${test.framework.version}</version>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.automation</groupId>
             <artifactId>org.wso2.carbon.automation.core</artifactId>
-            <version>${test.framework.version}</version>
         </dependency>
         <dependency>
             <groupId>org.wso2.carbon.automation</groupId>
             <artifactId>org.wso2.carbon.automation.utils</artifactId>
-            <version>${test.framework.version}</version>
         </dependency>
         <dependency>
             <groupId>org.testng</groupId>
             <artifactId>testng</artifactId>
-            <version>6.8</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.wso2.charon</groupId>
             <artifactId>org.wso2.charon.core</artifactId>
-            <version> 1.0.1-wso2v1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.wink</groupId>
             <artifactId>wink-client</artifactId>
-            <version>1.1.3-incubating</version>
         </dependency>
-    </dependencies>
-    <properties>
-        <test.framework.version>4.2.6</test.framework.version>
-        <emma.version>2.1.5320</emma.version>
-    </properties>
 </project>
