Correcting the parent pom to build product with available nexus repo

--- a/modules/integration/pom.xml
+++ b/modules/integration/pom.xml
@@ -36,7 +36,7 @@
         <module>tests-common/integration-test-utils</module>
         <module>tests-common/ui-pages</module>
         <module>tests-integration</module>
-        <module>tests-ui-integration</module>
+        <!--<module>tests-ui-integration</module>-->
         <!--<module>tests</module>-->
     </modules>
     <build>
