--- a/modules/features/org.wso2.identity.styles.feature/pom.xml
+++ b/modules/features/org.wso2.identity.styles.feature/pom.xml
@@ -35,10 +35,12 @@
 		<dependency>
 			<groupId>org.wso2.identity</groupId>
 			<artifactId>org.wso2.identity.styles</artifactId>
+			<version>${product.identity.version}</version>
 		</dependency>
         <dependency>
             <groupId>org.wso2.carbon</groupId>
             <artifactId>org.wso2.carbon.core.ui.feature</artifactId>
+			<version>${carbon.kernel.version}</version>
             <type>zip</type>
         </dependency>
 	</dependencies>
