--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<module>modules/distribution</module>
 		<module>modules/styles</module>
 		<module>modules/dashboard</module>
-		<!--<module>modules/integration</module>-->
+		<module>modules/integration</module>
 		<!--<module>modules/samples</module>-->
 	</modules>
 
@@ -840,10 +840,10 @@
         <wss4j.wso2.version>1.5.11.wso2v9</wss4j.wso2.version>
         <openws.version>1.4.2</openws.version>
         <charon.version>2.0.0</charon.version>
-        <xalan.version>1.7.2</xalan.version>
+        <xalan.version>2.7.2</xalan.version>
         <xalan.wso2.version>2.7.0.wso2v1</xalan.wso2.version>
         <rampart.wso2.version>1.6.1.wso2v14</rampart.wso2.version>
-        <orbit.version.commons.httpclient>4.2.5.wso2v1</orbit.version.commons.httpclient>
+        <orbit.version.commons.httpclient>3.1.0.wso2v2</orbit.version.commons.httpclient>
         <commons.httpclient.version>3.1</commons.httpclient.version>
         <httpcore.wso2.version>4.1.3.wso2v1</httpcore.wso2.version>
         <httpclient.version>4.0.1</httpclient.version>
