Buildable product with released versions
Conflicts:
	modules/distribution/pom.xml
	pom.xml

--- a/modules/samples/scim/scim-provisioning/pom.xml
+++ b/modules/samples/scim/scim-provisioning/pom.xml
@@ -18,8 +18,8 @@
             <artifactId>org.wso2.charon.core</artifactId>
         </dependency>
         <dependency>
-            <groupId>commons-httpclient.wso2</groupId>
-            <artifactId>commons-httpclient</artifactId>
+            <groupId>org.apache.httpcomponents.wso2</groupId>
+            <artifactId>httpclient</artifactId>
         </dependency>
     </dependencies>
 
